tests/baselines/reference/exportAssignmentCircularModules.errors.txt
foo_0.ts(2,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
foo_1.ts(2,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
foo_2.ts(2,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== foo_2.ts (1 errors) ====
    import foo0 = require("./foo_0");
    module Foo {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
    	export var x = foo0.x;
    }
    export = Foo;
    
==== foo_0.ts (1 errors) ====
    import foo1 = require('./foo_1');
    module Foo {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
    	export var x = foo1.x;
    }
    export = Foo;
    
==== foo_1.ts (1 errors) ====
    import foo2 = require("./foo_2");
    module Foo {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
    	export var x = foo2.x;
    }
    export = Foo;
    